PR 46419 by Abhinav Upadhyay using his updated patch: Clean up after removing man page aliases.